package cn.thenai.uml.dependence;

public class PersonDao {
}