@startuml
'https://plantuml.com/class-diagram

class IDCard

class Person

class Department

class PersonDao

class PersonServiceBean{
    -personDao PersonDao
    +sava(person:Person): void
    +getIDCard(personId:Integer):IDCard
    +modify():void
}

PersonServiceBean..>PersonDao
PersonServiceBean..>Department
PersonServiceBean..>Person
PersonServiceBean..>IDCard


@enduml